src/objects/Payment_Services_Configuration__c.object
<CustomObject>
    <label>Payment Services Configuration</label>
    <nameField>
        <label>Payment Services Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Services Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Is_Secret__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether the Key and Value are secret.</description>
        <label>Is Secret</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>The name of a piece of configuration data from Elevate. It&apos;s associated value is stored in the Value__c field.</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Key__c</fullName>
        <description>The combination of the Service and the Key value, delimited by &quot;::&quot;.</description>
        <externalId>true</externalId>
        <label>Service Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>The name of the Elevate service the Key and Value are associated with.</description>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value of a piece of configuration data from Elevate. It&apos;s associated name is stored in the key__c field.</description>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>